<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imageView"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background_blur">


    <RelativeLayout
        android:id="@+id/rltSignOn"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo_vtvplay"/>

        <EditText
            android:id="@+id/edtUserName"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_below="@+id/ivLogo"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Số điện thoại"
            android:inputType="number"/>

        <EditText
            android:id="@+id/edtPassword"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="Mật khẩu"
            android:inputType="textPassword"
            android:layout_below="@+id/edtUserName"/>



        <Button
            android:id="@+id/btnSignIn"
            style="@style/button_style"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_below="@+id/edtPassword"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/signin"/>

        <LinearLayout
            android:id="@+id/llHoac"
            android:layout_below="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0.0dip"
                android:layout_height="1.0dip"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:background="#cf999999" />

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:padding="5.0dip"
                android:text="Hoặc"
                android:textColor="@color/white" />

            <View
                android:layout_width="0.0dip"
                android:layout_height="1.0dip"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:background="#cf999999" />
        </LinearLayout>

        <Button
            android:id="@+id/btnFacebook"
            style="@style/button_facebook_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llHoac"
            android:layout_marginBottom="10dp"
            android:text="@string/signin_facebook"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button
            android:id="@+id/btnGoogle"
            style="@style/button_google_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnFacebook"
            android:text="@string/signin_google"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_editor_absoluteY="370dp"
            tools:layout_editor_absoluteX="40dp" />
        <RelativeLayout
            android:id="@+id/rltForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_editor_absoluteY="478dp">

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingBottom="5.0dip"
                android:paddingTop="5.0dip"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/tvRegister_fontSize"
                android:textStyle="italic" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rltRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnGoogle"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1">

            <TextView
                android:id="@+id/tvRegisterAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="30.0dip"
                android:paddingTop="30.0dip"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/tvRegister_fontSize" />

            <TextView
                android:id="@+id/btn_recovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingBottom="30.0dip"
                android:paddingTop="30.0dip"
                android:text="@string/recovery"
                android:textColor="@color/white"
                android:textSize="@dimen/tvRegister_fontSize"
                tools:ignore="RtlHardcoded" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>